--- a/src/main/resources/public/css/colors.css
+++ b/src/main/resources/public/css/colors.css
@@ -3,7 +3,7 @@
   color: white;
 }
 .blue-background-2 {
-  background-color: rgbrgb(0, 39, 21);
+  background-color: rgb(0, 39, 21);
   color: white;
 }
 .blue-background-dark {
